# dz2

./: .gitignore  .travis.yml  CMakeLists.txt
include/: crawl.h  crawlParallel.h  crawlSequintally.h  libCrawlParallel.h  libCrawlSequintally.h  utils.h
src/: crawl.c  crawlParallel.c  crawlSequintally.c  libCrawlParallel.c  libCrawlSequintally.c  main.c  utils.c
test/: CMakeLists.txt  crawlTest.cpp
